<resources>
    <string name="app_name">Modu</string>
    <string name="facebook_app_id">1526523640839180</string>
    <string name="fb_login_protocol_scheme">fb1526523640839180</string>
    <string name="tv_won">원</string>
    <string name="tv_right_arrow"> 〉</string>
    <string name="splash_description"> 〉</string>
    <string name="tv_sign_up_bottom">회원가입</string>
    <string name="tv_sign_up_top">회원정보</string>
    <string name="tv_sign_up_name_hint">이름 또는 닉네임</string>
    <string name="tv_sign_up_id_hint">아이디 입력</string>
    <string name="tv_sign_up_password_hint">비밀번호 입력</string>
    <string name="tv_sign_up_password_verify_hint">비밀번호 확인</string>
    <string name="tv_sign_up_content_description">sign_up</string>
    <string name="sign_up_tv_sign_up_info_top">이름을\n알려주세요.</string>
    <string name="sign_up_tv_sign_up_info_tv_next">다음</string>
    <string name="sign_up_tv_sign_up_info_hint_name">이름</string>
    <string name="sign_up_tv_sign_up_verify_tv_top">본인 인증을\n진행해주세요.</string>
    <string name="sign_up_tv_sign_up_verify_hint_phone">휴대폰 번호 (-없이 입력)</string>
    <string name="sign_up_tv_sign_up_verify_tv_send_verify_code">인증</string>
    <string name="sign_up_tv_sign_up_verify_tv_send_verify_code_again">재발송</string>
    <string name="sign_up_tv_sign_up_verify_hint_code">인증번호 입력</string>
    <string name="sign_up_tv_sign_up_verify_tv_verify_complete">완료</string>
    <string name="tv_serviceFee">구독 서비스 이용료</string>
    <string name="tv_serviceFee_tool">10월 구독 서비스 이용료</string>
    <string name="tv_main_home_service_fee">12,400</string>
    <string name="tv_main_home_service_fee_won">원</string>
    <string name="tv_main_d_day">D-</string>
    <string name="tv_main_won">원</string>
    <string name="tv_service_my_pattern">나의 소비내역</string>
    <string name="tv_main_description">Main</string>
    <string name="tv_main_dollar">USD</string>
    <string name="tv_main_my_info_month">월</string>
    <string name="tv_main_my_info_service_fee">0</string>
    <string name="tv_item_home_description">Home</string>
    <string name="tv_item_home_service_add">구독 서비스 추가하기</string>
    <string name="tv_item_home_date">10월3일</string>
    <string name="tv_item_home_month">월</string>
    <string name="tv_item_home_day">일</string>
    <string name="tv_item_home_hyphen">-</string>
    <string name="tv_item_home_dot">.</string>
    <string name="tv_item_home_dday">D-2</string>
    <string name="tv_item_home_category">영상 스트리밍</string>
    <string name="tv_item_home_brand">멜론 · Hi-Fi 스트리밍</string>
    <string name="tv_item_home_while">1개월째 구독중</string>
    <string name="tv_item_home_price">12,000원</string>
    <string name="tv_item_home_change_plan">플랜변경</string>
    <string name="tv_item_home_cancel_plan">구독취소</string>
    <string name="tv_item_home_setting_plan">관리</string>
    <string name="tv_item_home_empty_url">URL이 비어 있습니다.</string>
    <string name="tv_item_home_alarm_not">알람 기능은 추후에 업데이트 예정입니다.</string>
    <string name="tv_item_home_no_valid_url">유효하지 않은 URL입니다.</string>
    <string name="tv_service_add_description">Service_Add</string>
    <string name="tv_service_top">서비스 추가</string>
    <string name="tv_service_essential_info">필수 정보</string>
    <string name="tv_service_extra_info">선택 정보</string>
    <string name="tv_service_product_name">구독 서비스명</string>
    <string name="tv_service_product_name_hint">서비스명 입력</string>
    <string name="tv_service_search">찾기</string>
    <string name="tv_service_price">금액</string>
    <string name="tv_service_price_hint">￦</string>
    <string name="tv_service_price_currency">화폐단위</string>
    <string name="tv_service_last">마지막 결제일</string>
    <string name="tv_service_last_hint">결제일 입력</string>
    <string name="tv_service_duration">결제 주기</string>
    <string name="tv_service_duration_tool">0</string>
    <string name="tv_service_duration_month">마다</string>
    <string name="tv_service_add_image">이미지 추가</string>
    <string name="tv_service_add_image_btn">추가하기</string>
    <string name="tv_service_alarm">알림 설정</string>
    <string name="tv_service_alarm_hint">다음 결제일로부터</string>
    <string name="tv_service_alarm_day">전</string>
    <string name="tv_service_extra">추가 설명</string>
    <string name="tv_service_extra_hint">없음</string>
    <string name="tv_service_change_plan">플랜 변경 링크</string>
    <string name="tv_service_change_plan_hint">URL</string>
    <string name="tv_service_cancel_plan_link">구독 해지 링크</string>
    <string name="tv_service_cancel_plan_phone">구독 해지 번호 (추후 업데이트)</string>
    <string name="tv_service_cancel_plan_hint">URL</string>
    <string name="tv_service_cancel_plan_phone_hint">010-1234-5678</string>
    <string name="tv_service_remove">서비스 삭제</string>
    <string name="tv_service_add">서비스 추가하기</string>
    <string name="tv_service_modify">서비스 수정완료</string>
    <string name="tv_service_remove_cancel">취소</string>
    <string name="tv_service_remove_remove">삭제하기</string>
    <string name="tv_service_toast_product">서비스명을 입력하세요.</string>
    <string name="tv_service_toast_price">금액을 입력하세요</string>
    <string name="tv_service_toast_price_not_int">한화는 소수 입력이 불가능합니다.</string>
    <string name="tv_service_toast_last">마지막 결제일을 넣어주세요.</string>
    <string name="tv_service_toast_duration">결제 주기를 입력하세요.</string>
    <string name="tv_service_toast_alarm">알림을 설정해주세요.</string>
    <string name="tv_service_toast_remove">서비스를 먼저 추가해 주세요.</string>
    <string name="tv_service_alarm_per">일</string>
    <string name="tv_service_add_dialog">완료</string>
    <string name="tv_service_add_dialog_alarm_none">없음</string>
    <string name="tv_service_add_dialog_alarm_d_day">당일</string>
    <string-array name="day_week_month_year">
        <item>일</item>
        <item>주</item>
        <item>달</item>
        <item>년</item>
    </string-array>
    <string name="day">일</string>
    <string name="week">주</string>
    <string name="month">달</string>
    <string name="year">년</string>
    <string-array name="duration_num">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
    </string-array>
    <string-array name="alarm_num">
        <item>없음</item>
        <item>당일</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        
    </string-array>
    <string name="tv_product_top">서비스명 입력</string>
    <string name="tv_product_service_name">구독 서비스명</string>
    <string name="tv_product_service_name_hint">서비스명 입력</string>
    <string name="tv_product_membership_hint">멤버십 종류</string>
    <string name="tv_product_complete">입력완료</string>
    <string name="tv_product_category_hint">카테고리 분류  ></string>
    <string name="tv_product_service_not">서비스명을 입력해 주세요.</string>
    <string name="tv_product_category_not">카테고리를 입력해 주세요.</string>
    <string name="middleDot_product">&#160;·&#160;</string>
    <string name="tv_dialog_login">로그인을 하시겠습니까?</string>
    <string name="tv_dialog_login_please">로그인을 하지 않으면\n기록한 정보가 삭제될 수 있습니다.</string>
    <string name="tv_dialog_login_later">나중에</string>
    <string name="tv_dialog_login_now">로그인 하기</string>
    <string name="tv_dialog_exit">모두를 나가실건가요?</string>
    <string name="tv_dialog_exit_negative">아니요</string>
    <string name="tv_dialog_exit_positive">예</string>
    <string name="tv_dialog_ready_for_update">공지사항</string>
    <string name="tv_dialog_ready_for_update_content">
        모두가 새단장을 준비중입니다.\n\n가까운 시일, 새로운 모습과 기능으로 유저 여러분을 다시 찾아뵙고자 합니다.\n\n하지만 부득이하게 새로운 모두에서는 현재의 데이터를 다시 입력하셔야 하는 불편함이 있습니다. 업데이트 전에 현재 이용중이신 구독 내역을 여러가지 형태로 백업해 두시길 추천드립니다.\n\n이번 업데이트를 모두가 앞으로 나아가기 위한 초석으로 생각해주시고 유저 여러분의 너른 양해를 부탁드립니다.\n\n여러분의 이용에 항상 감사드리며 곧 새로운 모습으로 찾아뵙도록 하겠습니다.
    </string>
    <string name="tv_dialog_ready_for_update_content_2">
        안녕하세요. 유저 여러분! \'모두\'의 새로운 기능을 기획중에 여러분의 소중한 의견을 듣고자 설문조사를 부탁드리려합니다.\n\n본 설문조사는 정기구매 및 렌탈에 대한 서비스 기획을 위한 것으로, 절대 타목적을 위해 여러분의 정보를 이용하지 않을 것을 약속드립니다.\n\n수집된 정보는 설문조사 종료를 기점으로 1년 후 전부 폐기될 것이며, 설문 종료 시 추첨을 통해 소소한 선물(\'스타벅스 기프티콘\')을 보내드릴 예정입니다.\n\n여러분의 많은 참여와 성실한 답변 부탁드립니다. 감사합니다!!!\n\n
    </string>
    <string name="tv_dialog_ready_for_update_ok">확인</string>
    <string name="tv_dialog_ready_for_update_next">다음</string>
    <string name="tv_dialog_go_survey_ok">설문하러 가기</string>
    <string name="tv_dialog_ready_for_update_negative">그만보기</string>
    <string name="tv_dialog_sign_up">등록되지 않은 계정입니다.\n회원가입을 해주세요.</string>
    <string name="tv_dialog_sign_up_cancel">취소</string>
    <string name="tv_dialog_sign_up_ok">확인</string>
    <string name="btn_add_service">서비스 추가하기</string>
    <string name="btn_myInfo">소비</string>
    <string name="btn_home">홈</string>
    <string name="btn_look_around">둘러보기</string>
    <string name="loading">Loading&#8230;</string>
    <string name="network_failure">연결 실패</string>
    <string name="middleDot">·</string>
    <string name="tv_look_description">Look Around</string>
    <string name="tv_look_tool_adobe">어도비 클라우드</string>
    <string name="tv_look_tool_fee">12,000원</string>
    <string name="tv_look_offline_service">오프라인</string>
    <string name="tv_look_itme_ready">준비 중</string>
    <string name="tv_look_detail">상세보기</string>
    <string name="tv_look_all">모두보기</string>
    <string name="tv_look_popular">인기 구독</string>
    <string name="tv_look_recommend">추천 순위</string>
    <string name="tv_look_category">카테고리</string>
    <string name="tv_look_online">온라인 구독</string>
    <string name="tv_look_offline">오프라인 구독</string>
    <string name="tv_look_cost_different">상품가격은 실제와 상이할 수 있습니다.</string>
    <string name="category_cloud">저장 클라우드</string>
    <string name="category_music">음악 스트리밍</string>
    <string name="category_video">영상 스트리밍</string>
    <string name="category_design">디자인</string>
    <string name="tv_currency_description">Currency</string>
    <string name="tv_currency_top">화폐 단위</string>
    <string name="tv_currency_kor">대한민국 KRW</string>
    <string name="tv_currency_us">미국 USD</string>
    <string name="tv_currency_kor_won">￦</string>
    <string name="tv_currency_us_dollar">＄</string>
    <string name="tv_login_top">로그인</string>
    <string name="tv_login_info">간편 로그인을 통해\n정보를 쉽고 빠르게 저장하세요.</string>
    <string name="tv_login_not_complete">추후 업데이트를 통해 SNS 연동을 구현할 예정입니다.</string>
    <string name="tv_login_naver">네이버 로그인</string>
    <string name="tv_login_kakao">카카오 로그인</string>
    <string name="tv_login_google">구글로 시작</string>
    <string name="tv_login_sign_up">회원가입 시 서비스 이용약관 및 개인정보 보호정책에 동의하게 됩니다.</string>
    <string name="tv_login_content_description">log_in</string>
    <string name="tv_image_add_top">이미지 추가</string>
    <string name="tv_picker_start">2000</string>
    <string name="tv_picker_end">2020</string>
    <string name="tv_widget_item_tools">15</string>
    <string name="tv_widget_empty">Empty</string>
    <string name="tv_widget_until_next">결제일까지</string>
</resources>