<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="178dp"
    android:background="@drawable/src_item_home"
    android:orientation="vertical"
    android:paddingTop="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="2dp">

        <TextView
            android:id="@+id/tv_item_home_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_item_home_date"
            android:textColor="@color/colorTextHomeItemDate"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_item_home_dday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_item_home_dday"
            android:textColor="@color/colorTextHomeItemDDayRed"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_item_home_alarm"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:contentDescription="@string/tv_item_home_description"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_alarm_false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_item_home_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorTextHomeItemBack"
            android:contentDescription="@string/tv_item_home_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_default" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_home_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:letterSpacing="-0.04"
                android:maxLength="15"
                android:maxLines="1"
                android:text="@string/tv_item_home_category"
                android:textColor="@color/colorTextHomeItemCategory"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_item_home_brand"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:letterSpacing="-0.04"
                android:maxLength="15"
                android:maxLines="1"
                android:text="@string/tv_item_home_brand"
                android:textColor="@color/colorTextHomeItemBrandAndWhile"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="60dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/tv_item_home_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_item_home_price"
            android:textColor="@color/colorTextHomeItemPrice"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/tv_item_home_change"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/src_item_home_bottom_left"
            android:gravity="center"
            android:text="@string/tv_item_home_change_plan"
            android:textColor="@color/colorTextHomeItemBottom"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_home_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/src_item_home_bottom_middle"
            android:gravity="center"
            android:text="@string/tv_item_home_cancel_plan"
            android:textColor="@color/colorTextHomeItemBottom"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_home_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/src_item_home_bottom_right"
            android:gravity="center"
            android:text="@string/tv_item_home_setting_plan"
            android:textColor="@color/colorTextHomeItemBottom"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>