<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/src_dialog_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/src_dialog_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tv_dialog_ready_for_update"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dialog_update_content"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|start"
                android:text="@string/tv_dialog_ready_for_update_content"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_negative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/src_dialog_login_bottom_left"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/tv_dialog_ready_for_update_negative"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dialog_positive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/src_dialog_login_bottom_right"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/tv_dialog_ready_for_update_next"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>