<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorConcept"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_login_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="12sp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/tv_login_content_description"
        android:onClick="onClick"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_login_info"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tv_login_not_complete"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="24dp">

                <TextView
                    android:id="@+id/tv_login_naver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/src_login_naver"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:text="@string/tv_login_naver"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@string/tv_login_content_description"
                    android:src="@drawable/ic_naver_icon" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp">

                <TextView
                    android:id="@+id/tv_login_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/src_login_google"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:text="@string/tv_login_google"
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@string/tv_login_content_description"
                    android:src="@drawable/ic_google_icon" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp">

                <TextView
                    android:id="@+id/tv_login_kakao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/src_login_kakao"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:text="@string/tv_login_kakao"
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@string/tv_login_content_description"
                    android:src="@drawable/ic_kakao_icon" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:maxLines="2"
                android:text="@string/tv_login_sign_up"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>